@@ -1,2 +1,2 @@
 #
-__version__ = '1.10'
+__version__ = '1.11.dev1'
